--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,1 +1,4 @@
-<h1>{{hero}}</h1>
+<div>
+    <label for="name">Hero name: </label>
+    <input id="name" ([ngModel])="hero.name" placeholder="name">
+</div>
