--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -12,6 +12,8 @@
     <li *ngFor="let hero of heroes">
         <a routerLink="/detail/{{hero.id}}"></a>
         <span class="badge">{{hero.id}}</span> {{hero.name}}
+
+        <button class="delete" title="delete hero" (click)="delete(hero)">x</button>
     </li>
 </ul>
 
